syntax = "proto3";

package proto;

option go_package = "internal/app/proto";

service api {
  rpc Get(ShortUrl) returns(OriginalURL);
  rpc Post(OriginalURL) returns(ShortUrl);
  rpc PostBatch(Batch) returns(Batch);
  rpc GetUserURLs(Empty) returns(Batch);
  rpc DeleteUserURLs(Batch) returns(Empty);
  rpc Ping(Empty) returns(Empty);
  rpc GetStats(Empty) returns(Stats);
}

message Empty{}

message OriginalURL{
  string Url = 1;
}

message ShortUrl{
  string Url = 1;
}

message UrlRecord{
  string OriginalURL = 1;
  string  ShortUrl = 2;
}

message Batch {
  repeated UrlRecord Records = 1;
}

message Stats {
  int32 URLs = 1;
  int32 Users = 2;
}

